--- a/database/sqlc.yaml
+++ b/database/sqlc.yaml
@@ -11,3 +11,4 @@ sql:
         emit_pointers_for_null_types: true
         emit_json_tags: true
         emit_interface: true
+        json_tags_case_style: "camel"
